<resources>
    <string name="app_name">Daily Horoscope</string>
    <string name="virgo">VIRGO</string>
    <string name="aug_23_sep_22">AUG 23- SEP 22</string>
    <string name="virgo_is_an_earth_sign_historically_represented_by_the_goddess_of_wheat_and_agriculture_an_association_that_speaks_to_virgo_s_deep_rooted_presence_in_the_material_world_virgos_are_logical_practical_and_systematic_in_their_approach_to_life_this_earth_sign_is_a_perfectionist_at_heart_and_isn_t_afraid_to_improve_skills_through_diligent_and_consistent_practice_virgo_rules_the_digestive_system_which_makes_these_earth_signs_especially_attuned_to_the_ingredients_that_make_up_a_whole_in_food_and_in_everything_else_they_re_hyper_aware_of_every_detail">Virgo is an earth sign historically represented by the goddess of wheat and agriculture, an association that speaks to Virgo’s deep-rooted presence in the material world. Virgos are logical, practical, and systematic in their approach to life. This earth sign is a perfectionist at heart and isn’t afraid to improve skills through diligent and consistent practice. Virgo rules the digestive system, which makes these earth signs especially attuned to the ingredients that make up a whole — in food and in everything else. They\'re hyper-aware of every detail.</string>
    <string name="aquarius">AQUARIUS</string>
    <string name="despite_the_word_aqua_in_its_name_aquarius_is_actually_the_last_air_sign_of_the_zodiac_aquarius_is_represented_by_the_water_bearer_the_mystical_healer_who_bestows_water_or_life_upon_the_land_accordingly_aquarius_is_the_most_humanitarian_astrological_sign_these_revolutionary_thinkers_fervently_support_power_to_the_people_aspiring_to_change_the_world_through_radical_social_progress_every_aquarian_is_a_rebel_at_heart_these_air_signs_despise_authority_and_anything_that_represents_conventionality_free_spirited_and_eccentric_they_can_often_be_identified_by_their_offbeat_fashion_sensibilities_unusual_hobbies_and_nonconformist_attitude">Despite the word “aqua” in its name, Aquarius is actually the last air sign of the zodiac. Aquarius is represented by the water bearer, the mystical healer who bestows water, or life, upon the land. Accordingly, Aquarius is the most humanitarian astrological sign. These revolutionary thinkers fervently support “power to the people,” aspiring to change the world through radical social progress. Every Aquarian is a rebel at heart: These air signs despise authority and anything that represents conventionality. Free-spirited and eccentric, they can often be identified by their offbeat fashion sensibilities, unusual hobbies, and nonconformist attitude.</string>
    <string name="jan_20_feb_19">JAN 20- FEB 19</string>
    <string name="libra">LIBRA</string>
    <string name="libra_is_an_air_sign_represented_by_the_scales_interestingly_the_only_inanimate_object_of_the_zodiac_an_association_that_reflects_libra_s_fixation_on_balance_and_harmony_libra_is_obsessed_with_symmetry_and_strives_to_create_equilibrium_in_all_areas_of_life_these_air_signs_are_the_aesthetes_of_the_zodiac_ruled_by_venus_the_planet_that_governs_love_beauty_and_money_libras_adore_high_art_intellectualism_and_connoisseurship_suave_libras_need_to_surround_themselves_with_stunning_objects_and_create_environments_that_reflect_their_exquisite_tastes_accordingly_these_air_signs_make_excellent_designers_decorators_art_critics_and_stylists">Libra is an air sign represented by the scales (interestingly, the only inanimate object of the zodiac), an association that reflects Libra\'s fixation on balance and harmony. Libra is obsessed with symmetry and strives to create equilibrium in all areas of life. These air signs are the aesthetes of the zodiac: Ruled by Venus, the planet that governs love, beauty, and money, Libras adore high art, intellectualism, and connoisseurship. Suave Libras need to surround themselves with stunning objects and create environments that reflect their exquisite tastes. Accordingly, these air signs make excellent designers, decorators, art critics, and stylists.</string>
    <string name="sep_23_oct_22">SEP 23- OCT 22</string>
    <string name="have_you_ever_been_so_busy_that_you_wished_you_could_clone_yourself_just_to_get_everything_done_that_s_the_gemini_experience_in_a_nutshell_appropriately_symbolized_by_the_celestial_twins_this_air_sign_was_interested_in_so_many_pursuits_that_it_had_to_double_itself_because_of_geminis_intrinsic_duality_they_re_often_falsely_misrepresented_as_two_faced_in_reality_however_gemini_rarely_has_a_hidden_agenda_playful_and_intellectually_curious_gemini_is_constantly_juggling_a_variety_of_passions_hobbies_careers_and_friend_groups_they_are_the_social_butterflies_of_the_zodiac_these_quick_witted_twins_can_talk_to_anyone_about_anything_find_them_buzzing_between_happy_hours_dinner_parties_and_dance_floors">Have you ever been so busy that you wished you could clone yourself just to get everything done? That’s the Gemini experience in a nutshell. Appropriately symbolized by the celestial twins, this air sign was interested in so many pursuits that it had to double itself. Because of Geminis\' intrinsic duality, they\'re often falsely misrepresented as two-faced. In reality, however, Gemini rarely has a hidden agenda. Playful and intellectually curious, Gemini is constantly juggling a variety of passions, hobbies, careers, and friend groups. They are the social butterflies of the zodiac: These quick-witted twins can talk to anyone about anything. Find them buzzing between happy hours, dinner parties, and dance floors.</string>
    <string name="may_21_jun_20">MAY 21- JUN 20</string>
    <string name="gemini">GEMINI</string>
    <string name="pisces_a_water_sign_is_the_last_constellation_of_the_zodiac_it_s_symbolized_by_two_fish_swimming_in_opposite_directions_representing_the_constant_division_of_pisces_s_attention_between_fantasy_and_reality_as_the_final_sign_pisces_has_absorbed_every_lesson_the_joys_and_the_pains_the_hopes_and_the_fears_learned_by_all_of_the_other_signs_this_makes_these_fish_the_most_psychic_empathetic_and_compassionate_creatures_of_the_astrological_wheel_with_such_immense_sensitivity_pisces_can_easily_become_swallowed_by_emotions_and_must_remember_to_stay_grounded_in_the_material_realm_appropriately_pisces_rules_the_feet">Pisces, a water sign, is the last constellation of the zodiac. It\'s symbolized by two fish swimming in opposite directions, representing the constant division of Pisces\'s attention between fantasy and reality. As the final sign, Pisces has absorbed every lesson — the joys and the pains, the hopes and the fears — learned by all of the other signs. This makes these fish the most psychic, empathetic, and compassionate creatures of the astrological wheel. With such immense sensitivity, Pisces can easily become swallowed by emotions and must remember to stay grounded in the material realm (appropriately, Pisces rules the feet).</string>
    <string name="mar_20_feb_19">MAR 20- FEB 19</string>
    <string name="pisces">PISCES</string>
    <string name="taurus_is_an_earth_sign_represented_by_the_bull_like_their_celestial_spirit_animal_taureans_enjoy_relaxing_in_serene_bucolic_environments_surrounded_by_soft_sounds_soothing_aromas_and_succulent_flavors_taurus_is_ruled_by_venus_the_enchanting_planet_that_governs_love_beauty_and_money_taurus_s_venusian_influence_make_this_earth_sign_the_most_sensual_of_the_zodiac_these_cosmic_oxen_are_enchanted_by_any_physical_manifestation_of_comfort_and_luxury_pleasure_is_a_necessity_for_epicurean_taureans_and_they_feel_most_content_when_pampered_taurus_governs_the_neck_so_neck_caresses_are_especially_irresistible_to_these_bulls">Taurus is an earth sign represented by the bull. Like their celestial spirit animal, Taureans enjoy relaxing in serene, bucolic environments, surrounded by soft sounds, soothing aromas, and succulent flavors. Taurus is ruled by Venus, the enchanting planet that governs love, beauty, and money. Taurus’s Venusian influence make this earth sign the most sensual of the zodiac: These cosmic oxen are enchanted by any physical manifestation of comfort and luxury. Pleasure is a necessity for epicurean Taureans and they feel most content when pampered. (Taurus governs the neck, so neck caresses are especially irresistible to these bulls.)</string>
    <string name="apr_19_may_20">APR 19- MAY 20</string>
    <string name="taurus">TAURUS</string>
    <string name="aries_loves_to_be_number_one_so_it_s_no_surprise_that_these_audacious_rams_are_the_first_sign_of_the_zodiac_bold_and_ambitious_aries_dives_headfirst_into_even_the_most_challenging_situations_which_is_appropriate_since_the_body_part_associated_with_aries_is_the_head_like_their_fellow_fire_signs_leo_and_sagittarius_aries_is_a_passionate_motivated_and_confident_leader_who_builds_community_with_their_cheerful_disposition_and_relentless_determination_uncomplicated_and_direct_in_their_approach_they_often_get_frustrated_by_exhaustive_details_and_unnecessary_nuances_they_like_things_quick_and_dirty_a_temperament_also_reflected_in_their_sexual_proclivities">Aries loves to be number one, so it’s no surprise that these audacious rams are the first sign of the zodiac. Bold and ambitious, Aries dives headfirst into even the most challenging situations (which is appropriate, since the body part associated with Aries is the head). Like their fellow fire signs, Leo and Sagittarius, Aries is a passionate, motivated, and confident leader who builds community with their cheerful disposition and relentless determination. Uncomplicated and direct in their approach, they often get frustrated by exhaustive details and unnecessary nuances. They like things quick and dirty, a temperament also reflected in their sexual proclivities.</string>
    <string name="mar_20_apr_19">MAR 20- APR 19</string>
    <string name="aries">ARIES</string>
    <string name="sagittarius">SAGITTARIUS</string>
    <string name="represented_by_the_archer_sagittarians_are_always_on_a_quest_for_knowledge_the_last_fire_sign_of_the_zodiac_sagittarius_launches_its_many_pursuits_like_blazing_arrows_chasing_after_geographical_intellectual_and_spiritual_adventures_fueled_by_wanderlust_these_archers_can_be_found_traversing_all_corners_of_the_world_on_thrill_seeking_expeditions_it_s_no_surprise_that_jupiter_the_planet_of_abundance_spirituality_and_growth_governs_sagittarius_with_so_many_journeys_under_their_belt_sagittarians_are_excellent_storytellers_and_can_light_up_any_room_with_their_exhilarating_tales_and_infectious_laughter_effortlessly_magnetic_sags_easily_attract_friends_and_lovers_with_their_sense_of_humor">Represented by the archer, Sagittarians are always on a quest for knowledge. The last fire sign of the zodiac, Sagittarius launches its many pursuits like blazing arrows, chasing after geographical, intellectual, and spiritual adventures. Fueled by wanderlust, these archers can be found traversing all corners of the world on thrill-seeking expeditions.It\'s no surprise that Jupiter, the planet of abundance, spirituality, and growth, governs Sagittarius. With so many journeys under their belt, Sagittarians are excellent storytellers and can light up any room with their exhilarating tales and infectious laughter. Effortlessly magnetic, Sags easily attract friends and lovers with their sense of humor.</string>
    <string name="nov_23_dec_21">NOV 23- DEC 21</string>
</resources>