<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F6BDE2"
    android:orientation="vertical"
    android:padding="@dimen/card_padding">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/taurus"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="448dp"
        android:adjustViewBounds="true"
        android:scrollbarSize="4dp"
        app:srcCompat="@drawable/taurus"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:adjustViewBounds="false"
            app:srcCompat="@drawable/ic_baseline_favorite"
             />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.8"
            android:text="@string/apr_19_may_20"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/taurus_is_an_earth_sign_represented_by_the_bull_like_their_celestial_spirit_animal_taureans_enjoy_relaxing_in_serene_bucolic_environments_surrounded_by_soft_sounds_soothing_aromas_and_succulent_flavors_taurus_is_ruled_by_venus_the_enchanting_planet_that_governs_love_beauty_and_money_taurus_s_venusian_influence_make_this_earth_sign_the_most_sensual_of_the_zodiac_these_cosmic_oxen_are_enchanted_by_any_physical_manifestation_of_comfort_and_luxury_pleasure_is_a_necessity_for_epicurean_taureans_and_they_feel_most_content_when_pampered_taurus_governs_the_neck_so_neck_caresses_are_especially_irresistible_to_these_bulls"
        android:textColor="@color/black"
        android:textSize="20sp" />
</LinearLayout>