<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EC8565"
    android:orientation="vertical"
    android:padding="@dimen/card_padding">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/sagittarius"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="448dp"
        android:adjustViewBounds="true"
        android:scrollbarSize="4dp"
        app:srcCompat="@drawable/sagg"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:adjustViewBounds="false"
            app:srcCompat="@drawable/ic_baseline_favorite"
             />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.8"
            android:text="@string/nov_23_dec_21"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/represented_by_the_archer_sagittarians_are_always_on_a_quest_for_knowledge_the_last_fire_sign_of_the_zodiac_sagittarius_launches_its_many_pursuits_like_blazing_arrows_chasing_after_geographical_intellectual_and_spiritual_adventures_fueled_by_wanderlust_these_archers_can_be_found_traversing_all_corners_of_the_world_on_thrill_seeking_expeditions_it_s_no_surprise_that_jupiter_the_planet_of_abundance_spirituality_and_growth_governs_sagittarius_with_so_many_journeys_under_their_belt_sagittarians_are_excellent_storytellers_and_can_light_up_any_room_with_their_exhilarating_tales_and_infectious_laughter_effortlessly_magnetic_sags_easily_attract_friends_and_lovers_with_their_sense_of_humor"
        android:textColor="@color/black"
        android:textSize="20sp" />
</LinearLayout>