<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="@dimen/card_padding">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/gemini"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="448dp"
        android:adjustViewBounds="true"
        android:scrollbarSize="4dp"
        app:srcCompat="@drawable/gemini"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:adjustViewBounds="false"
            app:srcCompat="@drawable/ic_baseline_favorite"
             />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.8"
            android:text="@string/may_21_jun_20"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/have_you_ever_been_so_busy_that_you_wished_you_could_clone_yourself_just_to_get_everything_done_that_s_the_gemini_experience_in_a_nutshell_appropriately_symbolized_by_the_celestial_twins_this_air_sign_was_interested_in_so_many_pursuits_that_it_had_to_double_itself_because_of_geminis_intrinsic_duality_they_re_often_falsely_misrepresented_as_two_faced_in_reality_however_gemini_rarely_has_a_hidden_agenda_playful_and_intellectually_curious_gemini_is_constantly_juggling_a_variety_of_passions_hobbies_careers_and_friend_groups_they_are_the_social_butterflies_of_the_zodiac_these_quick_witted_twins_can_talk_to_anyone_about_anything_find_them_buzzing_between_happy_hours_dinner_parties_and_dance_floors"
        android:textColor="@color/black"
        android:textSize="20sp" />
</LinearLayout>